# search_util

./: CMakeLists.txt  README.md
src/: boyer_moore.cpp  boyer_moore.h  hybrid_search.cpp  hybrid_search.h  index_search.cpp  index_search.h  main.cpp  search_util.cpp  search_util.h
tests/: CMakeLists.txt  create_tests.py  test_boyer_moore.cpp  test_search_util.cpp
tests/test_files/: large_file.txt  mixed_ascii_nonascii.txt  multiple_matches.txt  special.txt
tests/test_files/no_matches_dir/: file2.txt
